added prittier formating and done some chages done

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -1,178 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../../Assets/logo/favicon.jpg"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CV - Home</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <nav>
-            <div id="logo">cv</div>
-            <div class="links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="../other/aboutUs/index.html">About</a></li>
-                    <li><a href="../other/contactUs/index.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="enterBtn"><a href="../accounts/signup/index.html"><button>Sign Up</button></a></div>
-        </nav>
-        <div class="container">
-            <div class="content">
-                <h1>Online <span>Resume</span> Builder</h1>
-                <p>A CV is the first contact you have with a prospective employer and it is your chance to make a good first impression.
-                     You use it to show your prospective employer why they should hire you and what the benefits of having you on their team will be.
-                </p>
-                <a href="../accounts/signup/index.html"><button id="startBtn">Start Now</button></a>
-            </div>
-            <div class="image">
-                <button id="imageLeftSlideBtn"><img src="../../Assets/svg/arrow-left-solid.svg" alt=""></button>
-                <div class="imageList">
-                    <img src="../../Assets/images/heroResumeImg1.jpg" alt="Resume Image" class="img active">
-                    <img src="../../Assets/images/heroResumeImg2.jpg" alt="Resume Image" class="img">
-                    <img src="../../Assets/images/heroResumeImg3.jpg" alt="Resume Image" class="img">
-                    <img src="../../Assets/images/heroResumeImg4.jpg" alt="Resume Image" class="img">
-                    <img src="../../Assets/images/heroResumeImg5.jpg" alt="Resume Image" class="img">
-                </div>
-                <button id="imageRightSlideBtn"><img src="../../Assets/svg/arrow-right-solid.svg" alt=""></button>
-            </div>
+      <nav>
+        <div id="logo">cv</div>
+        <div class="links">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="../other/aboutUs/index.html">About</a></li>
+            <li><a href="../other/contactUs/index.html">Contact</a></li>
+          </ul>
         </div>
+        <div class="enterBtn">
+          <a href="../accounts/signup/index.html"><button>Sign Up</button></a>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="content">
+          <h1>Online <span>Resume</span> Builder</h1>
+          <p>
+            A CV is the first contact you have with a prospective employer and
+            it is your chance to make a good first impression. You use it to
+            show your prospective employer why they should hire you and what the
+            benefits of having you on their team will be.
+          </p>
+          <a href="../accounts/signup/index.html"
+            ><button id="startBtn">Start Now</button></a
+          >
+        </div>
+        <div class="image">
+          <button id="imageLeftSlideBtn">
+            <img src="../../Assets/svg/arrow-left-solid.svg" alt="" />
+          </button>
+          <div class="imageList">
+            <img
+              src="../../Assets/images/heroResumeImg1.jpg"
+              alt="Resume Image"
+              class="img active"
+            />
+            <img
+              src="../../Assets/images/heroResumeImg2.jpg"
+              alt="Resume Image"
+              class="img"
+            />
+            <img
+              src="../../Assets/images/heroResumeImg3.jpg"
+              alt="Resume Image"
+              class="img"
+            />
+            <img
+              src="../../Assets/images/heroResumeImg4.jpg"
+              alt="Resume Image"
+              class="img"
+            />
+            <img
+              src="../../Assets/images/heroResumeImg5.jpg"
+              alt="Resume Image"
+              class="img"
+            />
+          </div>
+          <button id="imageRightSlideBtn">
+            <img src="../../Assets/svg/arrow-right-solid.svg" alt="" />
+          </button>
+        </div>
+      </div>
     </div>
     <div class="main">
-        <div class="sectionOne">
-            <div class="imageContent">
-                <h1>How to <span>use</span> Resume Builder ?</h1>
-                <div class="cardList">
-                    <div class="cardContent">
-                        <div class="card">
-                        </div>
-                        <h3>Create An account</h3>
-                    </div>
-                    <div class="cardContent">
-                        <div class="card">
-                        </div>
-                        <h3>Choose Template</h3>
-                    </div>
-                    <div class="cardContent">
-                        <div class="card">
-                        </div>
-                        <h3>Fill the Blanks</h3>
-                    </div>
-                    <div class="cardContent">
-                        <div class="card">
-                        </div>
-                        <h3>Ready To Download</h3>
-                    </div>
-                </div>
-                <a href="../Use/index.html"><button id="sectionOneBtn">Learn More !</button></a>
+      <div class="sectionOne">
+        <div class="imageContent">
+          <h1>How to <span>use</span> Resume Builder ?</h1>
+          <div class="cardList">
+            <div class="cardContent">
+              <div class="card"></div>
+              <h3>Create An account</h3>
             </div>
+            <div class="cardContent">
+              <div class="card"></div>
+              <h3>Choose Template</h3>
+            </div>
+            <div class="cardContent">
+              <div class="card"></div>
+              <h3>Fill the Blanks</h3>
+            </div>
+            <div class="cardContent">
+              <div class="card"></div>
+              <h3>Ready To Download</h3>
+            </div>
+          </div>
+          <a href="../Use/index.html"
+            ><button id="sectionOneBtn">Learn More !</button></a
+          >
         </div>
+      </div>
 
-        <div class="sectionTwo">
-            <div class="sectionTwoImg">
-                <img src="../../Assets/svg/undraw_stand_out_-1-oag.svg" alt="">
-            </div>
-            <div class="sectionTwoContent">
-                <h1>Stand out form the croud, be <span>yourself</span></h1>
-                <p>“Find a way to differentiate yourself.” “Now there is no reason to look back at your past and to worry about, it's time to move on strongly and stand out in the crowd.”
-                     “Become so passionate and dynamic that when people meet you, you're simply unforgettable.”
-                     “Never underestimate your value and your influence."</p>
-            </div>
+      <div class="sectionTwo">
+        <div class="sectionTwoImg">
+          <img src="../../Assets/svg/undraw_stand_out_-1-oag.svg" alt="" />
         </div>
+        <div class="sectionTwoContent">
+          <h1>Stand out form the croud, be <span>yourself</span></h1>
+          <p>
+            Find a way to differentiate yourself. Now there is no reason to look
+            back at your past and to worry about, it's time to move on strongly
+            and stand out in the crowd. Become so passionate and dynamic that
+            when people meet you, you're simply unforgettable. Never
+            underestimate your value and your influence.
+          </p>
+        </div>
+      </div>
 
-        <div class="sectionThree">
-            <h1>Get some <span>Extra plans</span></h1>
-            <div class="packages">
-                <div class="basicPakage">
-                    <img src="../../Assets/svg/arrow-right-solid.svg" alt="" id="arrowRight">
-                    <h2>Free Plans</h2>
-                    <p>
-                       Get Our free plans which includes all the core features below so you can start making it now.
-                         Continue using it for as long as you want at no cost.
-                    </p>
-                    <h5>In Free plans You Will Get</h5>
-                    <ul>
-                        <li><img src="../../Assets/svg/success.svg" /> Limited Templates</li>
-                        <li><img src="../../Assets/svg/delete.svg" />Community Support</li>
-                        <li><img src="../../Assets/svg/delete.svg" />Account Maintain</li>
-                        <li><img src="../../Assets/svg/success.svg" />New Updates</li>
-                    </ul>
-                    <a href="../accounts/signup/index.html"><button>Get Free Plans</button></a>
-                </div>
-                <div class="primiumPakage">
-                    <img src="../../Assets/svg/arrow-left-solid.svg" alt="" id="arrowLeft">
-                    <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora
-                        quaerat sed repellat minus, nulla tenetur</p>
-                    <h5>In Primium You Will Get</h5>
-                    <ul>
-                        <li><img src="../../Assets/svg/success.svg" />Unimited Templates</li>
-                        <li><img src="../../Assets/svg/success.svg" />Community Support</li>
-                        <li><img src="../../Assets/svg/success.svg" />Account Maintain</li>
-                        <li><img src="../../Assets/svg/success.svg" />New Updates</li>
-                    </ul>
-                    <a href="../accounts/signup/index.html"><button>Get Primium</button></a>
-                </div>
-            </div>
+      <div class="sectionThree">
+        <h1>Get something <span>Extra</span></h1>
+        <div class="packages">
+          <div class="basicPakage">
+            <img
+              src="../../Assets/svg/arrow-right-solid.svg"
+              alt=""
+              id="arrowRight"
+            />
+            <h2>Free Plans</h2>
+            <p>
+              Get Our free plans which includes all the core features below so
+              you can start making it now. Continue using it for as long as you
+              want at no cost.
+            </p>
+            <h5>In Free plans You Will Get</h5>
+            <ul>
+              <li>
+                <img src="../../Assets/svg/success.svg" /> Limited Templates
+              </li>
+              <li>
+                <img src="../../Assets/svg/delete.svg" />Community Support
+              </li>
+              <li><img src="../../Assets/svg/delete.svg" />Account Maintain</li>
+              <li><img src="../../Assets/svg/success.svg" />New Updates</li>
+            </ul>
+            <a href="../accounts/signup/index.html"
+              ><button>Get Free Plans</button></a
+            >
+          </div>
+          <div class="primiumPakage">
+            <img
+              src="../../Assets/svg/arrow-left-solid.svg"
+              alt=""
+              id="arrowLeft"
+            />
+            <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              minima blanditiis tempora quaerat sed repellat minus, nulla
+              tenetur
+            </p>
+            <h5>In Primium You Will Get</h5>
+            <ul>
+              <li>
+                <img src="../../Assets/svg/success.svg" />Unimited Templates
+              </li>
+              <li>
+                <img src="../../Assets/svg/success.svg" />Community Support
+              </li>
+              <li>
+                <img src="../../Assets/svg/success.svg" />Account Maintain
+              </li>
+              <li><img src="../../Assets/svg/success.svg" />New Updates</li>
+            </ul>
+            <a href="../accounts/signup/index.html"
+              ><button>Get Primium</button></a
+            >
+          </div>
         </div>
+      </div>
     </div>
     <div class="footer">
-        <div class="fotterInfo">
-            <div>
-                <img src="../../Assets/svg/paper-plane-solid.svg" alt="">
-                <p>India</p>
-            </div>
-            <div>
-                <img src="../../Assets/svg/language-solid.svg" alt="">
-                <p>English</p>
-            </div>
+      <div class="fotterInfo">
+        <div>
+          <img src="../../Assets/svg/paper-plane-solid.svg" alt="" />
+          <p>India</p>
         </div>
-        <div class="footerLinks">
-            <div>
-                <h3>Company</h3>
-                <ul>
-                    <a href="../other/aboutUs/index.html">
-                        <li>About</li>
-                    </a><a href="#">
-                        <li>FAQ</li>
-                    </a><a href="../accounts/signup/index.html">
-                        <li>Primium</li>
-                    </a>
-                </ul>
-            </div>
-            <div>
-                <h3>Support</h3>
-                <ul>
-                    <a href="../other/contactUs/index.html"><li>Send Feedback</li></a>
-                    <a href="#"><li>Students Offer</li></a>
-                </ul>
-            </div>
+        <div>
+          <img src="../../Assets/svg/language-solid.svg" alt="" />
+          <p>English</p>
         </div>
-        <div class="mediaLinks">
-            <h3>Follow us :</h3>
-            <div class="mediaImg">
-                <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt=""></a>
-                <a href="#"><img src="../../Assets/svg/github.svg" alt=""></a>
-                <a href="#"><img src="../../Assets/svg/mail.svg" alt=""></a>
-            </div>
-            <hr>
-            <div id="copyright" style="margin-top: 20px;">
-                <p>    
-                    &copy; Builder.io 2023.
-                </p>
-            </div>
+      </div>
+      <div class="footerLinks">
+        <div>
+          <h3>Company</h3>
+          <ul>
+            <a href="../other/aboutUs/index.html">
+              <li>About</li> </a
+            ><a href="#">
+              <li>FAQ</li> </a
+            ><a href="../accounts/signup/index.html">
+              <li>Primium</li>
+            </a>
+          </ul>
         </div>
+        <div>
+          <h3>Support</h3>
+          <ul>
+            <a href="../other/contactUs/index.html">
+              <li>Send Feedback</li>
+            </a>
+            <a href="#">
+              <li>Students Offer</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+      <div class="mediaLinks">
+        <h3>Follow us :</h3>
+        <div class="mediaImg">
+          <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt="" /></a>
+          <a href="#"><img src="../../Assets/svg/github.svg" alt="" /></a>
+          <a href="#"><img src="../../Assets/svg/mail.svg" alt="" /></a>
+        </div>
+        <hr />
+        <div id="copyright" style="margin-top: 20px">
+          <p>&copy; Builder.io 2023.</p>
+        </div>
+      </div>
     </div>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
