pritter is used

--- a/src/Use/index.html
+++ b/src/Use/index.html
@@ -1,131 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../../../Assets/logo/favicon.jpg"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CV - Use</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <nav>
-            <div id="logo">cv</div>
-            <div class="links">
-                <ul>
-                    <li><a href="../welcomePage/index.html">Home</a></li>
-                    <li><a href="../other/aboutUs/index.html">About</a></li>
-                    <li><a href="../other/contactUs/index.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="enterBtn"><a href="../accounts/signup/index.html"><button>Sign Up</button></a></div>
-        </nav>
+      <nav>
+        <div id="logo">cv</div>
+        <div class="links">
+          <ul>
+            <li><a href="../welcomePage/index.html">Home</a></li>
+            <li><a href="../other/aboutUs/index.html">About</a></li>
+            <li><a href="../other/contactUs/index.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="enterBtn">
+          <a href="../accounts/signup/index.html"><button>Sign Up</button></a>
+        </div>
+      </nav>
     </div>
     <div class="main">
-        <div class="section section1">
-            <div class="content">
-                <h1 id="verText">Step 1</h1>
-                <div>
-                    <h2>Create an Account</h2>
-                <p>
-                    Firstly Create an Acount by signing in.Fill your email id password and hit enter your account will be created.
-                </p></div>
-            </div>
-            <div class="image">
-                <img src="../../Assets/svg/undraw_access_account_re_8spm.svg" alt="an image for understading">
-            </div>
+      <div class="section section1">
+        <div class="content">
+          <h1 id="verText">Step 1</h1>
+          <div>
+            <h2>Create an Account</h2>
+            <p>
+              The step 1 is goto <a href="../accounts/signup/index.html" style="color: rgb(7, 108, 241)">sign up</a> 🔗
+              link or <a href="../accounts/signin/index.html" style="color: rgb(7, 108, 241)">Login</a> 🔗 to
+              your account and follow the steps given below. To make your resume
+              within the minites and download the pdf format of your resume and
+              share 🤝🏼 the pdf with the HR or industry people for the new job
+              oppurtunities 🤗.
+            </p>
+          </div>
         </div>
-        <div class="section section2">
-            <div class="image">
-                <img src="../../Assets/svg/undraw_reviewed_docs_re_9lmr.svg" alt="an image for understading">
-            </div>
-            <div class="content">
-                <h1 id="verText">Step 2</h1>
-                <div>
-                    <h2>Choose Template</h2>
-                <p>
-                    Select a templete from.
-                </p>
-                </div> 
-            </div>
+        <div class="image">
+          <img
+            src="../../Assets/svg/undraw_access_account_re_8spm.svg"
+            alt="an image for understading"
+          />
         </div>
-        <div class="section section3">
-            <div class="content">
-                <h1 id="verText">Step 3</h1>
-                <div>
-                    <h2>Fill the Blanks</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugiat porro quae. Et quia nisi nesciunt autem aspernatur id adipisci?</p>
-                </div> 
-            </div>
-            <div class="image">
-                <img src="../../Assets/svg/undraw_fill_form_re_cwyf.svg" alt="an image for understading">
-            </div>
+      </div>
+      <div class="section section2">
+        <div class="image">
+          <img
+            src="../../Assets/svg/undraw_reviewed_docs_re_9lmr.svg"
+            alt="an image for understading"
+          />
         </div>
-        <div class="section section4">
-            <div class="image">
-                <img src="../../Assets/svg/undraw_download_re_li50.svg" alt="an image for understading">
-            </div>
-            <div class="content">
-                <h1 id="verText">Step 4</h1>
-                <div>
-                    <h2>Ready to Download</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur deserunt reiciendis corrupti quod placeat, iste voluptas ex doloremque?</p>
-                </div> 
-            </div>
+        <div class="content">
+          <h1 id="verText">Step 2</h1>
+          <div>
+            <h2>Choose Template</h2>
+            <p>
+              The step 2 is on you to choose 🤔 the templates given to you and
+              your resume 📄 will build into the template you choosen. In
+              templates you have both free and permium members template and you
+              can choose the template as your plane subscribed 🚩.
+            </p>
+          </div>
         </div>
+      </div>
+      <div class="section section3">
+        <div class="content">
+          <h1 id="verText">Step 3</h1>
+          <div>
+            <h2>Fill the Blanks</h2>
+            <p>
+              The step 3 was the filling the multi step form 📝 which ask you
+              about personal infomation, Educational details like the collage 🏫
+              and other stuff and about your industry experience. Your skills, mail Id 📧
+              and finally your Image 🤳🏼 for resume building.
+            </p>
+          </div>
+        </div>
+        <div class="image">
+          <img
+            src="../../Assets/svg/undraw_fill_form_re_cwyf.svg"
+            alt="an image for understading"
+          />
+        </div>
+      </div>
+      <div class="section section4">
+        <div class="image">
+          <img
+            src="../../Assets/svg/undraw_download_re_li50.svg"
+            alt="an image for understading"
+          />
+        </div>
+        <div class="content">
+          <h1 id="verText">Step 4</h1>
+          <div>
+            <h2>Ready to Download</h2>
+            <p>
+              In Last and the final stage. When you submit the forms it will genrate the resume for you which conatins the information given by you and its layout is which you choose in step 2. you can download it as pdf and share it to the indusry people 😇.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="footer">
-        <div class="fotterInfo">
-            <div>
-                <img src="../../Assets/svg/paper-plane-solid.svg" alt="">
-                <p>India</p>
-            </div>
-            <div>
-                <img src="../../Assets/svg/language-solid.svg" alt="">
-                <p>English</p>
-            </div>
+      <div class="fotterInfo">
+        <div>
+          <img src="../../Assets/svg/paper-plane-solid.svg" alt="" />
+          <p>India</p>
         </div>
-        <div class="footerLinks">
-            <div>
-                <h3>Company</h3>
-                <ul>
-                    <a href="../other/aboutUs/index.html">
-                        <li>About</li>
-                    </a><a href="#">
-                        <li>FAQ</li>
-                    </a><a href="../accounts/signup/index.html">
-                        <li>Primium</li>
-                    </a>
-                </ul>
-            </div>
-            <div>
-                <h3>Support</h3>
-                <ul>
-                    <a href="../other/contactUs/index.html"><li>Send Feedback</li></a>
-                    <a href="#"><li>Students Offer</li></a>
-                </ul>
-            </div>
+        <div>
+          <img src="../../Assets/svg/language-solid.svg" alt="" />
+          <p>English</p>
         </div>
-        <div class="mediaLinks">
-            <h3>Follow us :</h3>
-            <div class="mediaImg">
-                <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt=""></a>
-                <a href="#"><img src="../../Assets/svg/github.svg" alt=""></a>
-                <a href="#"><img src="../../Assets/svg/mail.svg" alt=""></a>
-            </div>
-            <hr>
-            <div id="copyright" style="margin-top: 20px;">
-                <p>    
-                    &copy; Builder.io 2023.
-                </p>
-            </div>
+      </div>
+      <div class="footerLinks">
+        <div>
+          <h3>Company</h3>
+          <ul>
+            <a href="../other/aboutUs/index.html"> <li>About</li> </a
+            ><a href="#"> <li>FAQ</li> </a
+            ><a href="../accounts/signup/index.html">
+              <li>Primium</li>
+            </a>
+          </ul>
         </div>
+        <div>
+          <h3>Support</h3>
+          <ul>
+            <a href="../other/contactUs/index.html"><li>Send Feedback</li></a>
+            <a href="#"><li>Students Offer</li></a>
+          </ul>
+        </div>
+      </div>
+      <div class="mediaLinks">
+        <h3>Follow us :</h3>
+        <div class="mediaImg">
+          <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt="" /></a>
+          <a href="#"><img src="../../Assets/svg/github.svg" alt="" /></a>
+          <a href="#"><img src="../../Assets/svg/mail.svg" alt="" /></a>
+        </div>
+        <hr />
+        <div id="copyright" style="margin-top: 20px">
+          <p>&copy; Builder.io 2023.</p>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
