app main logo and styling is added to all the pages

--- a/src/accounts/signin/index.html
+++ b/src/accounts/signin/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="header">
         <nav>
-            <div id="logo">cv</div>
+            <div id="logo"><img src="../../../Assets/logo/CV.png" alt=""></div>
             <div class="links">
                 <ul>
                     <li><a href="../../welcomePage/index.html">Home</a></li>
