--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="header">
       <nav>
-        <div id="logo">cv</div>
+        <div id="logo"><img src="../../Assets/logo/CV.png" alt=""></div>
         <div class="links">
           <ul>
             <li><a href="#">Home</a></li>
