arrow in free packages is now on right side

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -137,6 +137,7 @@
               src="../../Assets/svg/arrow-right-solid.svg"
               alt=""
               id="arrowRight"
+              style="float:right"
             />
             <h2>Free Plans</h2>
             <p>
