content is added in packages like free and primium

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -141,9 +141,7 @@
             />
             <h2>Free Plans</h2>
             <p>
-              Get Our free plans which includes all the core features below so
-              you can start making it now. Continue using it for as long as you
-              want at no cost.
+              Get Our free 🆓 plans for you. <b>In free plan what you will get ? </b><br><i>includes 👉🏼 some of the core features below so you can start making it now. Continue using it for as long as <br> you want at no cost.</i>
             </p>
             <h5>In Free plans You Will Get</h5>
             <ul>
@@ -168,9 +166,7 @@
             />
             <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              minima blanditiis tempora quaerat sed repellat minus, nulla
-              tenetur
+              Get Our Primium 👑 plan for you. <b>In Primium plan what you will get ? </b><br><i>includes 👉🏼 all the core features below so you can start making it now.</i>
             </p>
             <h5>In Primium You Will Get</h5>
             <ul>
