github link is added

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -228,7 +228,7 @@
         <h3>Follow us :</h3>
         <div class="mediaImg">
           <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt="" /></a>
-          <a href="#"><img src="../../Assets/svg/github.svg" alt="" /></a>
+          <a href="https://github.com/shreyashpatil2002/CV"><img src="../../Assets/svg/github.svg" alt="" /></a>
           <a href="#"><img src="../../Assets/svg/mail.svg" alt="" /></a>
         </div>
         <hr />
