The background image and content is added

--- a/src/other/aboutUs/index.html
+++ b/src/other/aboutUs/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../../../Assets/logo/favicon.jpg"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CV - About Us</title>
-</head>
-<body>
-    <div class="header">
+  </head>
+
+  <body>
+    <div class="heroSection">
+      <div class="header">
         <nav>
-            <div id="logo"><img src="../../../Assets/logo/CV.png" alt=""></div>
-            <div class="links">
-                <ul>
-                    <li><a href="../../welcomePage/index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="../contactUs/index.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="enterBtn"><a href="../../accounts/signup/index.html"><button>Sign Up</button></a></div>
+          <div id="logo"><img src="../../../Assets/logo/CV.png" alt="" /></div>
+          <div class="links">
+            <ul>
+              <li><a href="../../welcomePage/index.html">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="../contactUs/index.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="enterBtn">
+            <a href="../../accounts/signup/index.html"
+              ><button>Sign Up</button></a
+            >
+          </div>
         </nav>
+      </div>
+      <div class="main">
+        <h1>An Resume Builder</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque quis iste at. Nostrum deserunt minus, nemo debitis dolore dignissimos accusamus reiciendis, omnis, facere harum ab quod. Porro, illum dicta. Cumque!</p>
+        <div class="mediaLinks">
+          <h3>Follow Us</h3>
+          <a href="#"><img src="../../../Assets/svg/linkedin (1).svg" alt=""></a>
+          <a href="#"><img src="../../../Assets/svg/github.svg" alt=""></a>
+          <a href="#"><img src="../../../Assets/svg/mail.svg" alt=""></a>
+        </div>
+      </div>
     </div>
-    <div class="main">
-        <h2>About Us 👬</h2>
+    <div class="teamSection">
+      
     </div>
-</body>
+  </body>
 </html>
