footer is added

--- a/src/other/aboutUs/index.html
+++ b/src/other/aboutUs/index.html
@@ -42,16 +42,59 @@
       <div class="main">
         <h1>An Resume Builder</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque quis iste at. Nostrum deserunt minus, nemo debitis dolore dignissimos accusamus reiciendis, omnis, facere harum ab quod. Porro, illum dicta. Cumque!</p>
-        <div class="mediaLinks">
-          <h3>Follow Us</h3>
-          <a href="#"><img src="../../../Assets/svg/linkedin (1).svg" alt=""></a>
-          <a href="#"><img src="../../../Assets/svg/github.svg" alt=""></a>
-          <a href="#"><img src="../../../Assets/svg/mail.svg" alt=""></a>
-        </div>
       </div>
     </div>
     <div class="teamSection">
-      
+
+    </div>
+    <div class="footer">
+      <div class="fotterInfo">
+        <div>
+          <img src="../../../Assets/svg/paper-plane-solid.svg" alt="" />
+          <p>India</p>
+        </div>
+        <div>
+          <img src="../../../Assets/svg/language-solid.svg" alt="" />
+          <p>English</p>
+        </div>
+      </div>
+      <div class="footerLinks">
+        <div>
+          <h3>Company</h3>
+          <ul>
+            <a href="../../other/aboutUs/index.html">
+              <li>About</li> </a
+            ><a href="#">
+              <li>FAQ</li> </a
+            ><a href="../../accounts/signup/index.html">
+              <li>Primium</li>
+            </a>
+          </ul>
+        </div>
+        <div>
+          <h3>Support</h3>
+          <ul>
+            <a href="../contactUs/index.html">
+              <li>Send Feedback</li>
+            </a>
+            <a href="#">
+              <li>Students Offer</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+      <div class="mediaLinks">
+        <h3>Follow us :</h3>
+        <div class="mediaImg">
+          <a href="#"><img src="../../../Assets/svg/linkedin (1).svg" alt="" /></a>
+          <a href="https://github.com/shreyashpatil2002/CV"><img src="../../../Assets/svg/github.svg" alt="" /></a>
+          <a href="#"><img src="../../../Assets/svg/mail.svg" alt="" /></a>
+        </div>
+        <hr />
+        <div id="copyright" style="margin-top: 20px">
+          <p>&copy; Builder.io 2023.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
