the header and account info is created

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -16,17 +16,18 @@
     <div class="header">
         <nav>
             <div id="logo">cv</div>
-            <div class="UserAccount"><button>shreyash <img src="" alt=""/></button></div>
-        </nav>
-        <div class="hidden UserAccountList">
-            <div class="links">
-                <ul>
-                    <li>Account</li>
-                    <li>Edit Account</li>
-                    <li>Logout</li>
-                </ul>
+            <div class="accountInfo">      
+            <div class="UserAccount"><button>shreyash &downarrow;</button></div>
+            <div class="UserAccountActive">
+                <div class="links">
+                    <ul>
+                        <a href="#"><li><img src="../../Assets/svg/user-solid.svg" alt=""> Account</li></a>
+                        <a href="#"><li><img src="../../Assets/svg/pen-to-square-solid (1).svg" alt=""> Edit Account</li></a>
+                        <a href="#"><li><img src="../../Assets/svg/right-from-bracket-solid.svg" alt=""> Logout</li></a>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
     </div>
     <div class="container">
         <div class="left_sidebar">
