Text and box shadow is changed

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -31,10 +31,10 @@
     </div>
     <div class="container">
         <div class="left_sidebar">
-            hello
+            SideBar
         </div>
         <div class="right_sidebar">
-            bye
+            MainContent
         </div>
     </div>
 </body>
