--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -1,41 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../Assets/logo/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../../Assets/logo/favicon.jpg"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>CV - Dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-        <nav>
-            <div id="logo">cv</div>
-            <div class="accountInfo">      
-            <div class="UserAccount"><button>shreyash &downarrow;</button></div>
-            <div class="UserAccountActive">
-                <div class="links">
-                    <ul>
-                        <a href="#"><li><img src="../../Assets/svg/user-solid.svg" alt=""> Account</li></a>
-                        <a href="#"><li><img src="../../Assets/svg/pen-to-square-solid (1).svg" alt=""> Edit Account</li></a>
-                        <a href="#"><li><img src="../../Assets/svg/right-from-bracket-solid.svg" alt=""> Logout</li></a>
-                    </ul>
-                </div>
+      <nav>
+        <div id="logo"><img src="../../Assets/logo/CV.png" alt="" /></div>
+        <div class="accountInfo">
+          <div class="UserAccount">
+            <img src="../../Assets/images/avatar (1).png" alt="" /> Shreyash
+          </div>
+          <div class="UserAccounthidden" id="UserAccountBox">
+            <p>Welcome, Shreyash</p>
+            <hr>
+            <div class="links">
+              <ul>
+                <a href="#"
+                  ><li>
+                    <img src="../../Assets/svg/user-solid.svg" alt="" /> Account
+                  </li></a
+                >
+                <a href="#"
+                  ><li>
+                    <img
+                      src="../../Assets/svg/pen-to-square-solid (1).svg"
+                      alt=""
+                    />
+                    Edit Account
+                  </li></a
+                >
+                <a href="#"
+                  ><li>
+                    <img
+                      src="../../Assets/svg/right-from-bracket-solid.svg"
+                      alt=""
+                    />
+                    Logout
+                  </li></a
+                >
+              </ul>
             </div>
-        </nav>
+          </div>
+        </div>
+      </nav>
     </div>
     <div class="container">
-        <div class="left_sidebar">
-            SideBar
+      <div class="left_sidebar">
+        <div class="ContentList">
+            <ul>
+                <li>Create</li>
+                <li>Templates</li>
+                <li>Resumes</li>
+                <li>Activity</li>
+                <li>Contact Us</li>
+            </ul>
         </div>
-        <div class="right_sidebar">
-            MainContent
-        </div>
+      </div>
+      <div class="right_sidebar">MainContent</div>
     </div>
-</body>
+    <script src="./script/userAccounttoggle.js"></script>
+  </body>
 </html>
