dashboard is getting ready and leftSide is ready

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -72,6 +72,12 @@
                 <li>Contact Us</li>
             </ul>
         </div>
+        <div class="Oppurtunity">
+            <h3>Explore</h3>
+            <p>Here are something that take boost to your carrer in IT Field. Top companies offer students some 
+                benificial things.
+            </p>
+        </div>
       </div>
       <div class="right_sidebar">MainContent</div>
     </div>
