--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -65,19 +65,31 @@
       <div class="left_sidebar">
         <div class="ContentList">
             <ul>
-                <li>Create</li>
-                <li>Templates</li>
-                <li>Resumes</li>
+                <li>Create &plus;</li>
+                <li>Templates &part;</li>
+                <li>Resumes &parallel;</li>
                 <li>Activity</li>
                 <li>Contact Us</li>
             </ul>
         </div>
-        <div class="Oppurtunity">
+        <div class="Extra">
             <h3>Explore</h3>
             <p>Here are something that take boost to your carrer in IT Field. Top companies offer students some 
                 benificial things.
             </p>
         </div>
+        <div class="mediaLinks">
+            <h3>Follow us :</h3>
+            <div class="mediaImg">
+              <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt="" /></a>
+              <a href="https://github.com/shreyashpatil2002/CV"><img src="../../Assets/svg/github.svg" alt="" /></a>
+              <a href="#"><img src="../../Assets/svg/mail.svg" alt="" /></a>
+            </div>
+            <hr />
+            <div id="copyright" style="margin-top: 20px">
+              <p>&copy; Builder.io 2023.</p>
+            </div>
+          </div>
       </div>
       <div class="right_sidebar">MainContent</div>
     </div>
